crates/tui/tests/snapshots/views__detail-unavailable-80x24.snap
---
source: crates/tui/tests/views.rs
expression: harness.screen()
---
home › subscribers get   account Acme (1)   list Weekly
GET /1.0/accounts/1/lists/7/subscribers — 403 your token may not read
subscribers




















q quit  Enter expand  J raw JSON  Esc back  Ctrl-p palette
